# Ant-Neuroevolution

./: .gitignore  GUI.py  README.md  artGUI.py  cloudAfrica.sh  config.yaml  determinant_sim.py  food_retrieved.npy  main.py  pyproject.toml  requirements.txt  results.pkl  results1.pkl  rl_results.ipynb  run_sim  run_sim.py  short_config.yml  test_args.py  test_plots.py  test_sim.py  unpickle_results.py
ant_nn/: agent.py  environment.py  plot.py  population.py  simulation.py
ant_nn/agent/: Agent.py  DeterminAnt.py  DiscretAnt.py  DiscretAnt2.py  DominAnt.py  FetchAnt.py  IntelligAnt.py  NNAnt.py  RandAnt.py  brain_util.py  population.py
ant_nn/environ/: Environment.py  GridCell.py
ant_nn/test/: test_determinant.py
configs/: determinant_config.yaml  dominant_config.yaml  dominant_init_frm_200_config.yaml  dominant_sincos.yaml  short_config.yaml
pickles/: ubuntu@41.79.77.53
