[tool.poetry]
name = "ant-neuroevolution"
version = "0.1.0"
description = "Neuroevolving ant foraging behaviour!"
authors = ["E Roussos, R Bingham, E Key, D Midkiff"]

[tool.poetry.dependencies]
python = "3.8.x"
numpy = "^1.20.2"
PySide2 = "^5.15.2"
PyYAML = "^5.4.1"
dill = "^0.3.3"
torch = "^1.8.1"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
